integration/tests/error_assert_content_encoding.hurl
# Return an unsupported content encoding
GET http://localhost:8000/error/content-encoding
HTTP/1.0 200
```Hello World!```
